@@ -17,9 +17,12 @@
 #ifndef FDLEAK_H
 # define FDLEAK_H
 
+# include <stdbool.h>		/* for bool */
+
 void remember_non_cloexec_fds (void);
 void forget_non_cloexec_fds (void);
 void complain_about_leaky_fds (void);
+bool fd_leak_check_is_enabled (void);
 
 int open_cloexec(const char *path, int flags, ...);
 
