@@ -49,6 +49,9 @@ xargs now supports the -o, --open-tty option to reopen stdin as /dev/tty
 in the child process before executing the command; useful to run an
 interactive application.  Added for compatibility with BSD.
 
+xargs now supports GNU_FINDUTILS_FD_LEAK_CHECK environment variable to
+enable/disable fd leak check.
+
 ** Documentation Changes
 
 Prefer https:// over http:// links where possible, e.g. for '*.gnu.org' servers.
